<resources>
    <string name="app_name">Syria Market</string>
    <string name="e_mail_address">البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="forgot_password">نسيت كلمة المرور؟</string>
    <string name="sign_in">تسجيل الدخول</string>
    <string name="new_user">مستخدم جديد؟</string>
    <string name="sign_up">إنشاء الحساب</string>
    <string name="here">هنا</string>
    <string name="repeat_password">كلمة المرور مجدداً</string>
    <string name="add_balance">أضف رصيد</string>
    <string name="profile">ملفي الشخصي</string>
    <string name="user_name">مستخدم جديد</string>
    <string name="edit">تعديل</string>
    <string name="code">الرمز</string>
    <string name="phone">الهاتف</string>
    <string name="location">الموقع</string>
    <string name="xxxxxx_gmail_com">xxxxxx@gmail.com</string>
    <string name="products">المنتجات</string>
    <string name="menu_icon">أيقونة القائمة</string>
    <string name="buy">شراء</string>
    <string name="card_description">وصف البطاقة</string>
    <string name="pubg_description">A PUBG Mobile card will allow you to buy weapons, skins, keys another items in the PUBG Mobile store of the game!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="card_balance">رصيد البطاقة:</string>
    <string name="pubg_currency">UC</string>
    <string name="card_price">السعر:</string>
    <string name="pt">Pt.</string>
    <string name="card_quantity">الكمية:</string>
    <string name="total_cost">التكلفة الكلية:</string>
    <string name="product_details">تفاصيل المنتج</string>
    <string name="check">تحقق</string>
    <string name="player_name_appear_here">سيظهر الإسم هنا</string>
    <string name="player_id">ID اللاعب</string>
    <string name="my_purchase">مشترياتي</string>
    <string name="product_name">عنوان المنتج</string>
    <string name="product_description">وصف المنتج</string>
    <string name="product_quantity">الكمية:</string>
    <string name="purchase_date">تاريخ الشراء:</string>
    <string name="product_number">رقم الطلب</string>
    <string name="product_status">حالة الطلب</string>
    <string name="product_type">نوع المنتج</string>
    <string name="product">المنتج</string>
    <string name="request_review">طلب مراجعة</string>
    <string name="user_balance">رصيدي:</string>
    <string name="menu_home">الرئيسية</string>
    <string name="sign_out_nav">تسجيل الخروج</string>
    <string name="menu_my_purchases">مشترياتي</string>
    <string name="menu_categories">المنتجات</string>
    <string name="balance">الرصيد:</string>
    <string name="item_status">الحالة:</string>
    <string name="charge_balance">شحن رصيد</string>
    <string name="add_coupon">أضف الرصيد</string>
    <string name="completed">مكتمل</string>
    <string name="not_completed">قيد المراجعة</string>
    <string name="whatsapp_products">منتجات واتساب</string>
    <string name="country">الدولة</string>
    <string name="accounts">الحسابات</string>
    <string name="user_name_card">إسم المستخدم</string>
    <string name="user_type">الفئة</string>
    <string name="user_role">النوع</string>
    <string name="balance_t2">الرصيد</string>
    <string name="user_details">المزيد</string>
    <string name="user_address">العنوان</string>
    <string name="img_description">Logo</string>
    <string name="admin_role">وكيل</string>
    <string name="customer_role">زبون</string>
    <string name="user_type_c">فئة C</string>
    <string name="user_type_b">فئة B</string>
    <string name="user_type_a">فئة A</string>
    <string name="required">مطلوب</string>
    <string name="password_not_matched">كلمة المرور غير متطابقة</string>
    <string name="create_coupon">إنشاء كوبون</string>
    <string name="coupon_status">الحالة</string>
    <string name="coupon_number">رقم الكوبون</string>
    <string name="create_new_category">إنشاء التصنيف الجديد</string>
    <string name="category_name">عنوان التصنيف</string>
    <string name="category_icon">صورة التصنيف</string>
    <string name="product_price_a">سعر المنتج A</string>
    <string name="product_price_b">سعر المنتج B</string>
    <string name="product_price_c">سعر المنتج C</string>
    <string name="create_product">إضافة المنتج</string>
    <string name="product_img">صورة المنتج</string>
    <string name="delete_user">حذف المستخدم</string>
    <string name="user_data">بيانات المستخدم</string>
    <string name="refund_admin">المرجعات</string>
    <string name="phones_and_codes">أكواد وأرقام</string>
    <string name="price_t2">السعر</string>
    <string name="user">المستخدم</string>
    <string name="user_name_t2">إسم المتسخدم</string>
    <string name="product_name_t2">إسم المنتج</string>
    <string name="category_label">التصنيف</string>
    <string name="order_number">رقم الطلب</string>
    <string name="create_new_number">إنشاء رقم جديد</string>
    <string name="create_number">إنشاء الرقم</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="activation_code">كود التفعيل</string>
    <string name="service_tag">إختصار الخدمة</string>
    <string name="country_code">مفتاح الدولة</string>
    <string name="country_flag">علم الدولة</string>
    <string name="create_new_country">إنشاء الدولة الجديدة</string>
    <string name="add">إضافة</string>
    <string name="nav_requests">الطلبات</string>
    <string name="accept_request">إعتماد</string>
    <string name="old_balance">الرصيد القديم</string>
    <string name="new_balance">الرصيد المضاف</string>
    <string name="total_balance">الرصيد الكلي</string>

</resources>